remove gap grid, copy fix

--- a/src/index.css
+++ b/src/index.css
@@ -47,18 +47,6 @@ body {
   box-shadow: 0 0 400px 50px rgba(255, 255, 255, .15);
 }
 
-#circle_ {
-  position: absolute;
-  bottom: 100px;
-  right: 100px;
-  border-radius: 50%;
-  box-shadow: 0 0 400px 50px rgb(75, 0, 130);
-}
-
-#leonardo {
-  text-shadow: 50px 0px 277px rgba(250, 250, 250, 0.95);
-}
-
 .hidden {
   opacity:0;
 }
